2010-08-18  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed.  Attempted build fix for EFL

        [EFL]REGRESSION(65530) need to fix build break
        https://bugs.webkit.org/show_bug.cgi?id=44154

        * CMakeListsEfl.txt:

2010-08-18  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed qt build fix.

        * WebCore.pri:

2010-08-17  Ilya Tikhonovsky  <loislo@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: replace hand written InspectorBackendStub.js with generated one.
        New command-line flag was added to combine-javascript-resources.
        It specifies the location of generated scripts.
        https://bugs.webkit.org/show_bug.cgi?id=43791

        * GNUmakefile.am:
        * WebCore.gyp/WebCore.gyp:
        * WebCore.gypi:
        * WebCore.pri:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * combine-javascript-resources:
        * inspector/CodeGeneratorInspector.pm:
        * inspector/front-end/InspectorBackendStub.js: Removed.
        * inspector/front-end/WebKit.qrc:

2010-08-18  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: extension panels do not occupy entire panel client area.
        https://bugs.webkit.org/show_bug.cgi?id=44167

        * inspector/front-end/ExtensionServer.js:
        (WebInspector.ExtensionServer.prototype._onCreatePanel):
        (WebInspector.ExtensionServer.prototype._createClientIframe):

2010-08-18  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Use SVGPathParser logic to traverse states of a Path
        https://bugs.webkit.org/show_bug.cgi?id=44009

        Move the getPathSegAtLength logic from SVGPathSegList into a new SVGPathConsumer
        class: SVGPathTraversalStateBuilder.
        This allows us to get a SVGPathSeg at a given length for SVGPathByteStreams and SVGPathSegLists.