@@ -1,3 +1,15 @@
+2010-08-18  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r65603.
+        http://trac.webkit.org/changeset/65603
+        https://bugs.webkit.org/show_bug.cgi?id=44179
+
+        4 tests crash on Qt bot (Requested by Ossy on #webkit).
+
+        * WebCore.pro:
+        * page/Geolocation.cpp:
+        (WebCore::Geolocation::handlePendingPermissionNotifiers):
+
 2010-08-18  Ryuan Choi  <ryuan.choi@samsung.com>
 
         Unreviewed.  Attempted build fix for EFL
